--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-redis
-click==6.7
+Click==7.0
 Flask==1.0.2
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
-Werkzeug==0.14.1
-SQLAlchemy==1.2.18
+lxml==4.3.1
+MarkupSafe==1.1.0
+numpy==1.16.1
 pandas==0.24.1
+pygal==2.4.0
 pyodbc==4.0.25
+python-dateutil==2.8.0
+pytz==2018.9
+redis==3.2.0
+six==1.12.0
+SQLAlchemy==1.2.18
+Werkzeug==0.14.1
